--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,6 +8,14 @@ body{
   background-image: url("../assets/images/bg-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
+
+  padding: 0;
+  margin: 0;
+}
+
+header{
+  background-color: red;
+  display: flex;
 }
 
 
