--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,7 +77,7 @@ main{
 
 .text-div-main p{
   text-align: left;
-  max-width: 400px;
+  max-width: 500px;
 
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
@@ -85,12 +85,24 @@ main{
 }
 
 
+footer{
+  display: flex;
+  max-width: 1440px;
+  background-color: #000;
+  padding: 15px;
 
+  margin: 0 auto;
+
+  justify-content: center
+}
 
 .attribution {
-  font-size: 11px;
+  font-family: 'Open Sans', sans-serif;
+  color: #FFF;
+  font-size: 12px;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  text-decoration: none;
+  color: hsl(228, 36%, 59%);
 }
