adicionado Button Register, removido padding left Div Text, adc space-around main

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,7 @@ main{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
 
   max-width: 1440px;
@@ -60,7 +61,6 @@ main{
   max-width: 640px;
   display: flex;
   flex-direction: column;
-  padding-left: 40px;
 
   color: #FFF;
 }
@@ -82,6 +82,16 @@ main{
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-weight: 400;
+}
+
+.btn-register{
+  width: 150px;
+  padding: 12px;
+  border-radius: 20px;
+  border: none;
+  background-color: #FFF;
+
+  color: var(--Violet);
 }
 
 
