--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,7 +102,27 @@ main{
   width: 1440px;
   display: flex;
   justify-content: flex-end;
+
+  color: #FFF;
+
+  margin-right: 30px;
+  margin-bottom: 20px;
 }
+
+.icon{
+  width: 50px;
+  text-align: center;
+  padding: 10px;
+  border: 1.5px solid #ffffff;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+
+.social-div-main i{
+  padding: 10px;
+  font-size: 25px;
+}
+
 
 
 footer{
