--- a/CSS/style.css
+++ b/CSS/style.css
@@ -194,6 +194,10 @@ footer{
     text-align: center;
   }
 
+  .btn-register{
+    width: 50%;
+  }
+
   .social-div-main{
     margin: 0;
     margin-top: 50px;
