--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,7 +133,7 @@ main{
 footer{
   display: flex;
   max-width: 1440px;
-  background-color: #000;
+  /* background-color: #000; */
   padding: 15px;
 
   margin: 0 auto;
